--- a/style.css
+++ b/style.css
@@ -2,9 +2,14 @@ body {
     text-align: center;
     color: aliceblue;
     background-color: darkblue;
-  }
-  .output {
+}
+.output {
     border: 3px solid white;
     margin: 1em 5em 1em 5em;
     display: none;
-  }
+    padding: 2em;
+}
+
+#hours { /* # for id */
+  font-size: x-large;
+}
